[tool.poetry]
name = "rustdaytime"
version = "0.1.0"
description = ""
authors = ["Desipeli <mr.desipeli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.54"
pysimplegui = "^4.60.5"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
